--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
             <!-- Email Capture Section -->
             <div class="bg-gray-900 py-16 sm:py-20">
-                <div class="mx-auto max-w-6xl px-6 lg:px-8">
+                <div class="mx-auto max-w-3xl px-6 lg:px-8">
                     <div class="bg-gray-800/90 backdrop-blur-sm rounded-2xl shadow-2xl border border-gray-700 p-8">
                         <div id="email-form-content">
                             <h3 class="text-2xl font-bold text-white text-center mb-6">Join the Waitlist</h3>
@@ -660,7 +660,7 @@
                         onComplete: () => {
                             // Auto-focus on desktop only
                             if (window.innerWidth >= 1024) {
-                                const inputField = document.getElementById('chat-input-field');
+                                const inputField = document.getElementById('chat-input-field-desktop');
                                 if (inputField) {
                                     inputField.focus();
                                 }
