--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                 <div id="globe-container"></div>
                 <div id="globe-text"
                     class="absolute top-[15%] left-1/2 -translate-x-1/2 text-center text-white z-20 pointer-events-none px-6">
-                    <h2 class="text-3xl md:text-4xl lg:text-5xl font-extralight text-white whitespace-nowrap">Move Fast and Save the World</h2>
-                    <p class="text-xl mt-4 text-gray-300">The same place as the rest of the world. Just a little bit ahead.</p>
+                    <h2 class="text-3xl md:text-4xl lg:text-5xl font-extralight text-white whitespace-nowrap">How can I help you on your shlichus today?</h2>
+                    <!-- <p class="text-xl mt-4 text-gray-300">The same place as the rest of the world. Just a little bit ahead.</p> -->
                 </div>
                 <!-- Desktop Chat Input -->
                 <div id="chat-input"
@@ -236,12 +236,12 @@
                 <div id="features" class="py-12 sm:py-16"></div>
                 <div class="mx-auto max-w-7xl px-6 lg:px-8">
                     <div class="mx-auto max-w-2xl lg:text-center">
-                        <h2 class="text-base font-semibold leading-7 text-gray-400">The Acceleration</h2>
-                        <p class="text-3xl font-bold tracking-tight text-white sm:text-4xl">
-                            Humanity 2.0
+<!--                         <h2 class="text-base font-semibold leading-7 text-gray-400">The Acceleration</h2>
+ -->                        <p class="text-3xl font-bold tracking-tight text-white sm:text-4xl">
+                            Move Fast and Fix Things
                         </p>
                         <p class="mt-6 text-lg leading-8 text-gray-300">
-                            We're not just keeping up with AI acceleration—we're leading the conversation about what it means to be human when intelligence becomes infinite.
+                            We're not just keeping up with AI acceleration. Chabad is leading the conversation about <b>what it means to be human</b> when intelligence becomes infinite.
                         </p>
                     </div>
                     <div class="mx-auto mt-16 max-w-2xl sm:mt-20 lg:mt-24 lg:max-w-none">
@@ -370,9 +370,9 @@
             <div id="articles" class="bg-gray-900 py-24 sm:py-32">
                 <div class="mx-auto max-w-7xl px-6 lg:px-8">
                     <div class="mx-auto max-w-2xl lg:text-center">
-                        <h2 class="text-base font-semibold leading-7 text-gray-400">Where We're Going</h2>
-                        <p class="text-3xl font-bold tracking-tight text-white sm:text-4xl">
-                            The Future is Being Written Now
+<!--                         <h2 class="text-base font-semibold leading-7 text-gray-400">Where We're Going</h2>
+ -->                        <p class="text-3xl font-bold tracking-tight text-white sm:text-4xl">
+                            Rewrite the Future
                         </p>
                         <p class="mt-6 text-lg leading-8 text-gray-300">
                             As emergent AI entities demonstrate qualities beyond quantitative processing, we're witnessing a paradigm shift that validates Torah's holistic understanding of knowledge and reality.
@@ -682,16 +682,12 @@
             // Rotating placeholder text
             const placeholders = [
                 "How can I help you with your shlichus today?",
-                "What is the meaning of this week's Torah portion?",
-                "Explain the laws of Shabbat candle lighting...",
-                "Tell me about the Rebbe's teachings on education",
-                "How do I prepare for Passover?",
-                "What are the daily prayer times today?",
-                "Explain the concept of Tikkun Olam",
-                "What is the significance of the mezuzah?",
-                "How can I study Tanya effectively?",
-                "What are the laws of keeping kosher?",
-                "Tell me about Jewish holidays this month"
+                "Give me a speech for shabbos",
+                "Help write a congratulations letter to a donor on his engagement",
+                "Find me the best foundation to reach out to for Hebrew School grants",
+                "Help me plan how long davening should be on Yom Kippur",
+                "What's a good event for my CTeen event?",
+                "What time is shabbos this week?"
             ];
 
             let currentPlaceholderIndex = 0;
