--- a/index.html
+++ b/index.html
@@ -374,15 +374,15 @@
                             <form id="ml-form" class="ml-block-form"
                                 action="https://assets.mailerlite.com/jsonp/905221/forms/118265804464588098/subscribe"
                                 method="post" target="_blank">
-                                <div class="flex items-center gap-4">
+                                <div class="flex items-center gap-3">
                                     <input aria-label="email" aria-required="true" type="email"
-                                        class="flex-1 bg-gray-900/50 text-white placeholder-gray-400 border border-gray-600 rounded-xl px-6 py-4 text-lg focus:outline-none focus:ring-2 focus:ring-gray-500"
+                                        class="flex-1 min-w-0 bg-gray-900/50 text-white placeholder-gray-400 border border-gray-600 rounded-xl px-4 py-3 text-base focus:outline-none focus:ring-2 focus:ring-gray-500"
                                         name="fields[email]" placeholder="shliach@chabadofmytown.com"
                                         autocomplete="email" required />
                                     <button type="submit"
-                                        class="flex-shrink-0 bg-gray-700 hover:bg-gray-600 text-white font-semibold p-4 rounded-xl transition-all flex items-center justify-center">
+                                        class="flex-shrink-0 bg-gray-700 hover:bg-gray-600 text-white font-semibold p-3 rounded-xl transition-all flex items-center justify-center">
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                            stroke-width="2" stroke="currentColor" class="w-6 h-6">
+                                            stroke-width="2" stroke="currentColor" class="w-5 h-5">
                                             <path stroke-linecap="round" stroke-linejoin="round"
                                                 d="M4.5 10.5 12 3m0 0 7.5 7.5M12 3v18" />
                                         </svg>
@@ -727,7 +727,7 @@
                 "Help write a congratulations letter to a donor on his engagement",
                 "Find me the best foundation to reach out to for Hebrew School grants",
                 "Help me plan how long davening should be on Yom Kippur",
-                "What's a good event for my CTeen event?",
+                "What's a good venue for my CTeen event?",
                 "What time is shabbos this week?"
             ];
 
